--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
@@ -16,7 +16,9 @@
         <form class="search-form" id="search-form">
             <input class="input" type="text" name="query" autocomplete="off" placeholder="input request..." />
             <input class="input-btn" type="submit" value="search" />
+            <input class="checkbox" type="checkbox" value="loadMore BUTTON"/>
         </form>
+            
         <div class="result-area">
             <ul class="gallery"></ul>
             <button class="input-btn more is-hidden" id="show-more">more</button>
