--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
         <form class="search-form" id="search-form">
             <input class="input" type="text" name="query" autocomplete="off" placeholder="input request..." />
             <input class="input-btn" type="submit" value="search" />
+            <label><input id="checkbox" type="checkbox" label="scroll" /><span class="span-text">infinity scroll</span></label>
         </form>
             
         <div class="result-area">
